--- a/package.json
+++ b/package.json
@@ -23,18 +23,19 @@
   "homepage": "https://github.com/GabrielaZarnescu/team2#readme",
   "dependencies": {
     "axios": "^0.21.1",
-    "body-parser": "^1.19.0",
-    "concurrently": "^6.2.0",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js",
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
     "colors": "^1.4.0",
+    "concurrently": "^6.2.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.13.5"
+    "mongoose": "^5.13.5",
+    "react-redux": "^7.2.4",
+    "start": "nodemon server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
