--- a/client/package.json
+++ b/client/package.json
@@ -22,9 +22,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "dev":"concurrently \"npm run server\" \"npm run client\""
   },
-  "proxy": "http://localhost:5000/",
+  "proxy": "http://localhost:4000/",
   "eslintConfig": {
     "extends": [
       "react-app",
