--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.5",
     "react-redux": "^7.2.4",
+    "reactstrap": "^8.9.0",
     "redux": "^4.1.1",
     "start": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
